# genetics

./: .gitignore  Gemfile  Guardfile  HelloGenetics.hs  LICENSE  LICENSE.md  Makefile  README.md  Shakefile.hs  genetics.cabal  genetics.hs  helloga.hs  hellogenetics.hs  package.json
src/: Genetics.hs  HelloGenetics.hs
