name:           genetics
version:        0.0.3
category:       Machine Learning
synopsis:       A Genetic Algorithm library
description:    A Gene typeclass for genetic algorithms
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/genetics.git

library
  build-depends:
    base              >= 4.3.1.0 && < 5,
    random            >= 1.1 && < 2,
    parallel          >= 3.2.0.3 && < 4

  exposed-modules: Genetics

  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs: src

executable hellogenetics
  build-depends:
    base              >= 4.3.1.0 && < 5,
    random            >= 1.1 && < 2,
    parallel          >= 3.2.0.3 && < 4

  other-modules: Genetics

  main-is: HelloGenetics.hs
  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs: src
