name:           genetics
version:        0.0.3
category:       Machine Learning
synopsis:       A Genetic Algorithm library
description:    A Gene typeclass for genetic algorithms
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
    type:     git
    location: https://github.com/mcandre/genetics.git

library
    build-depends:
        base              >= 4.3.1.0 && < 5,
        random            >= 1.1 && < 2,
        parallel          >= 3.2.0.3 && < 4

    exposed-modules: Genetics

    ghc-options: -Wall -fwarn-tabs
    hs-source-dirs: src

executable hellogenetics
    build-depends:
        base              >= 4.3.1.0 && < 5,
        random            >= 1.1 && < 2,
        parallel          >= 3.2.0.3 && < 4

    other-modules: Genetics

    main-is: HelloGenetics.hs
    ghc-options: -Wall -fwarn-tabs
    hs-source-dirs: src

test-suite reference
    build-depends:
        base                        >= 4.3.1.0 && < 5,
        hlint                       >= 2.1.10 && < 3,
        shake                       >= 0.16.4 && < 0.17,
        random                      >= 1.1 && < 2,
        parallel                    >= 3.2.0.3 && < 4

    ghc-options:        -Wall -fwarn-tabs
    hs-source-dirs:     src
    main-is:            HelloGenetics.hs
    type:               exitcode-stdio-1.0
